ANMProject/src/objects/In_Sync_Shipping__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>In Sync Shippings</relationshipLabel>
        <relationshipName>In_Sync_Shippings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Accuracy__c</fullName>
        <label>Shipping Accuracy</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country_Code__c</fullName>
        <label>Shipping Country Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Latitude__c</fullName>
        <label>Shipping Latitude</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Longitude_Code__c</fullName>
        <label>Shipping Longitude Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Code__c</fullName>
        <label>Shipping State Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>In Sync Shipping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>In Sync Shipping</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>In Sync Shippings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>